#8. Updated the home page fixed button and pop up sections to be removed on smaller screen sizes below 992px.

--- a/my-app/src/css/styles.less
+++ b/my-app/src/css/styles.less
@@ -285,15 +285,11 @@ p {
   .active a {
     border-top: none;
   }
-  .side-nav {
-    li {
-      a:hover {
-        color: #ffd53b;
-        background-color: #1e3445;
-        border-top: none;
-        line-height: unset;
-      }
-    }
+  .blurb {
+    display: none;
+  }
+  .fixed-action-btn {
+    display: none;
   }
   .navbar-nav li {
     font-size: 14px !important;
@@ -307,6 +303,16 @@ p {
   }
   .parallax-container {
     height: 300px;
+  }
+  .side-nav {
+    li {
+      a:hover {
+        color: #ffd53b;
+        background-color: #1e3445;
+        border-top: none;
+        line-height: unset;
+      }
+    }
   }
 }
 
